feat(LZ77): Add buggy LZ77 algorithm.